--- a/IwaProject-BackEnd/pom.xml
+++ b/IwaProject-BackEnd/pom.xml
@@ -65,19 +65,19 @@
             <version>2.9.5</version>
         </dependency>
 
-        <!-- spring security
+        <!-- spring security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!- JWT -
+        <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
-        -->
+
     </dependencies>
 
     <build>
