Little fixes + delete posts methods for users

--- a/IwaProject-BackEnd/src/main/resources/application.properties
+++ b/IwaProject-BackEnd/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-jwtSecretKey = EXchangeS3cR4T_K3Y
-jwtExpiration = 3600
+com.example.iwaproject.jwtSecretKey = jwtSecretKey
+com.example.iwaproject.jwtExpiration = 3600
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
