--- a/IwaProject-BackEnd/src/main/resources/application.properties
+++ b/IwaProject-BackEnd/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/iwaProjectDB
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://database:5432/iwaProjectDB
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-com.example.iwaproject.jwtSecretKey = jwtSecretKey
-com.example.iwaproject.jwtExpiration = 3600
+com.example.iwaproject.jwtSecretKey = ${JWT_SECRETKEY}
+com.example.iwaproject.jwtExpiration = ${JWT_EXPIRATION}
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
